布置前台菜单

--- a/AnnZone-Console/src/app/app.component.html
+++ b/AnnZone-Console/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="m-page-loader m-page-loader--non-block" style="margin-left: -80px; margin-top: -20px;">
 	<div class="m-blockui">
 		<span>
-			Please wait...
+			加载中,请稍后...
 		</span>
 		<span>
 			<div class="m-loader m-loader--brand"></div>
