--- a/AnnZone-Console/src/app/theme/layouts/footer/footer.component.html
+++ b/AnnZone-Console/src/app/theme/layouts/footer/footer.component.html
@@ -4,9 +4,9 @@
 		<div class="m-stack m-stack--flex-tablet-and-mobile m-stack--ver m-stack--desktop">
 			<div class="m-stack__item m-stack__item--left m-stack__item--middle m-stack__item--last">
 				<span class="m-footer__copyright">
-					2017 &copy; Metronic theme by
-					<a href="#" class="m-link">
-						Keenthemes
+					2018 &copy; Powered by
+					<a href="http://www.jiankian.com" target="_blank" class="m-link">
+						Jiankian
 					</a>
 				</span>
 			</div>
@@ -15,28 +15,35 @@
 					<li class="m-nav__item">
 						<a href="#" class="m-nav__link">
 							<span class="m-nav__link-text">
-								About
+								关于
 							</span>
 						</a>
 					</li>
 					<li class="m-nav__item">
 						<a href="#"  class="m-nav__link">
 							<span class="m-nav__link-text">
-								Privacy
+								隐私权
+							</span>
+						</a>
+					</li>
+					<li class="m-nav__item">
+							<a href="#" class="m-nav__link">
+								<span class="m-nav__link-text">
+									公司
+								</span>
+							</a>
+						</li>
+					<li class="m-nav__item">
+						<a href="#" class="m-nav__link">
+							<span class="m-nav__link-text">
+								Github
 							</span>
 						</a>
 					</li>
 					<li class="m-nav__item">
 						<a href="#" class="m-nav__link">
 							<span class="m-nav__link-text">
-								T&C
-							</span>
-						</a>
-					</li>
-					<li class="m-nav__item">
-						<a href="#" class="m-nav__link">
-							<span class="m-nav__link-text">
-								Purchase
+								码云
 							</span>
 						</a>
 					</li>
