--- a/AnnZone-Console/src/app/theme/layouts/quick-sidebar/quick-sidebar.component.html
+++ b/AnnZone-Console/src/app/theme/layouts/quick-sidebar/quick-sidebar.component.html
@@ -7,17 +7,17 @@
 		<ul id="m_quick_sidebar_tabs" class="nav nav-tabs m-tabs m-tabs-line m-tabs-line--brand" role="tablist">
 			<li class="nav-item m-tabs__item">
 				<a class="nav-link m-tabs__link active" data-toggle="tab" href="#m_quick_sidebar_tabs_messenger" role="tab">
-					Messages
+					聊天
 				</a>
 			</li>
 			<li class="nav-item m-tabs__item">
 				<a class="nav-link m-tabs__link" 		data-toggle="tab" href="#m_quick_sidebar_tabs_settings" role="tab">
-					Settings
+					设置
 				</a>
 			</li>
 			<li class="nav-item m-tabs__item">
 				<a class="nav-link m-tabs__link" data-toggle="tab" href="#m_quick_sidebar_tabs_logs" role="tab">
-					Logs
+					日志
 				</a>
 			</li>
 		</ul>
@@ -187,11 +187,11 @@
 					<div class="m-messenger__seperator"></div>
 					<div class="m-messenger__form">
 						<div class="m-messenger__form-controls">
-							<input type="text" name="" placeholder="Type here..." class="m-messenger__form-input">
+							<input type="text" name="" placeholder="输入聊天内容..." class="m-messenger__form-input">
 						</div>
 						<div class="m-messenger__form-tools">
 							<a href="" class="m-messenger__form-attachment">
-								<i class="la la-paperclip"></i>
+								<i class="flaticon-paper-plane"></i>
 							</a>
 						</div>
 					</div>
@@ -201,11 +201,11 @@
 				<div class="m-list-settings">
 					<div class="m-list-settings__group">
 						<div class="m-list-settings__heading">
-							General Settings
+							综合设置
 						</div>
 						<div class="m-list-settings__item">
 							<span class="m-list-settings__item-label">
-								Email Notifications
+								邮件通知
 							</span>
 							<span class="m-list-settings__item-control">
 								<span class="m-switch m-switch--outline m-switch--icon-check m-switch--brand">
@@ -218,7 +218,7 @@
 						</div>
 						<div class="m-list-settings__item">
 							<span class="m-list-settings__item-label">
-								Site Tracking
+								新用户注册
 							</span>
 							<span class="m-list-settings__item-control">
 								<span class="m-switch m-switch--outline m-switch--icon-check m-switch--brand">
@@ -231,7 +231,7 @@
 						</div>
 						<div class="m-list-settings__item">
 							<span class="m-list-settings__item-label">
-								SMS Alerts
+								文件上传
 							</span>
 							<span class="m-list-settings__item-control">
 								<span class="m-switch m-switch--outline m-switch--icon-check m-switch--brand">
@@ -244,7 +244,7 @@
 						</div>
 						<div class="m-list-settings__item">
 							<span class="m-list-settings__item-label">
-								Backup Storage
+								图片水印
 							</span>
 							<span class="m-list-settings__item-control">
 								<span class="m-switch m-switch--outline m-switch--icon-check m-switch--brand">
@@ -257,7 +257,7 @@
 						</div>
 						<div class="m-list-settings__item">
 							<span class="m-list-settings__item-label">
-								Audit Logs
+								图像压缩
 							</span>
 							<span class="m-list-settings__item-control">
 								<span class="m-switch m-switch--outline m-switch--icon-check m-switch--brand">
@@ -271,11 +271,11 @@
 					</div>
 					<div class="m-list-settings__group">
 						<div class="m-list-settings__heading">
-							System Settings
+							系统设置
 						</div>
 						<div class="m-list-settings__item">
 							<span class="m-list-settings__item-label">
-								System Logs
+								用户日志
 							</span>
 							<span class="m-list-settings__item-control">
 								<span class="m-switch m-switch--outline m-switch--icon-check m-switch--brand">
@@ -288,33 +288,7 @@
 						</div>
 						<div class="m-list-settings__item">
 							<span class="m-list-settings__item-label">
-								Error Reporting
-							</span>
-							<span class="m-list-settings__item-control">
-								<span class="m-switch m-switch--outline m-switch--icon-check m-switch--brand">
-									<label>
-										<input type="checkbox" name="">
-										<span></span>
-									</label>
-								</span>
-							</span>
-						</div>
-						<div class="m-list-settings__item">
-							<span class="m-list-settings__item-label">
-								Applications Logs
-							</span>
-							<span class="m-list-settings__item-control">
-								<span class="m-switch m-switch--outline m-switch--icon-check m-switch--brand">
-									<label>
-										<input type="checkbox" name="">
-										<span></span>
-									</label>
-								</span>
-							</span>
-						</div>
-						<div class="m-list-settings__item">
-							<span class="m-list-settings__item-label">
-								Backup Servers
+								防火墙
 							</span>
 							<span class="m-list-settings__item-control">
 								<span class="m-switch m-switch--outline m-switch--icon-check m-switch--brand">
@@ -327,7 +301,7 @@
 						</div>
 						<div class="m-list-settings__item">
 							<span class="m-list-settings__item-label">
-								Audit Logs
+								系统开关
 							</span>
 							<span class="m-list-settings__item-control">
 								<span class="m-switch m-switch--outline m-switch--icon-check m-switch--brand">
