--- a/AnnZone-Console/src/app/theme/layouts/tooltips/tooltips.component.html
+++ b/AnnZone-Console/src/app/theme/layouts/tooltips/tooltips.component.html
@@ -12,19 +12,14 @@
 		</a>
 	</li>
 	-->
-	<li class="m-nav-sticky__item" data-toggle="m-tooltip" title="Purchase" data-placement="left">
-		<a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" >
-			<i class="la la-cart-arrow-down"></i>
+	<li class="m-nav-sticky__item" data-toggle="m-tooltip" title="Office Website" data-placement="left">
+		<a href="http://www.anline.cn" target="_blank" >
+			<i class="la la-internet-explorer"></i>
 		</a>
 	</li>
-	<li class="m-nav-sticky__item" data-toggle="m-tooltip" title="Documentation" data-placement="left">
-		<a href="https://keenthemes.com/metronic/documentation.html" >
+	<li class="m-nav-sticky__item" data-toggle="m-tooltip" title="OpenSource" data-placement="left">
+		<a href="https://gitee.com/jiankian/AnnZone"  target="_blank">
 			<i class="la la-code-fork"></i>
-		</a>
-	</li>
-	<li class="m-nav-sticky__item" data-toggle="m-tooltip" title="Support" data-placement="left">
-		<a href="https://keenthemes.com/forums/forum/support/metronic5/" >
-			<i class="la la-life-ring"></i>
 		</a>
 	</li>
 </ul>
