--- a/AnnZone-Console/src/app/theme/pages/subheader--type-search/index/index.component.html
+++ b/AnnZone-Console/src/app/theme/pages/subheader--type-search/index/index.component.html
@@ -3,7 +3,7 @@
 	<div class="d-flex align-items-center">
 		<div class="mr-auto">
 			<h3 class="m-subheader__title m-subheader__title--separator">
-				Dashboard
+				仪表盘
 			</h3>
 			<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 				<li class="m-nav__item m-nav__item--home">
@@ -17,7 +17,7 @@
 				<li class="m-nav__item">
 					<a href="" class="m-nav__link">
 						<span class="m-nav__link-text">
-							Dashboard
+							仪表盘
 						</span>
 					</a>
 				</li>
@@ -27,7 +27,7 @@
 				<li class="m-nav__item">
 					<a href="" class="m-nav__link">
 						<span class="m-nav__link-text">
-							Generate Reports
+							概览
 						</span>
 					</a>
 				</li>
@@ -645,103 +645,8 @@
 	</div>
 	<!--End::Section-->  <!--Begin::Section-->
 	<div class="row">
-		<div class="col-xl-8">
-			<div class="m-portlet m-portlet--mobile">
-				<div class="m-portlet__head">
-					<div class="m-portlet__head-caption">
-						<div class="m-portlet__head-title">
-							<h3 class="m-portlet__head-text">
-								Exclusive Datatable Plugin
-							</h3>
-						</div>
-					</div>
-					<div class="m-portlet__head-tools">
-						<ul class="m-portlet__nav">
-							<li class="m-portlet__nav-item">
-								<div class="m-dropdown m-dropdown--inline m-dropdown--arrow m-dropdown--align-right m-dropdown--align-push" data-dropdown-toggle="hover" aria-expanded="true">
-									<a href="#" class="m-portlet__nav-link btn btn-lg btn-secondary  m-btn m-btn--icon m-btn--icon-only m-btn--pill  m-dropdown__toggle">
-										<i class="la la-ellipsis-h m--font-brand"></i>
-									</a>
-									<div class="m-dropdown__wrapper">
-										<span class="m-dropdown__arrow m-dropdown__arrow--right m-dropdown__arrow--adjust"></span>
-										<div class="m-dropdown__inner">
-											<div class="m-dropdown__body">
-												<div class="m-dropdown__content">
-													<ul class="m-nav">
-														<li class="m-nav__section m-nav__section--first">
-															<span class="m-nav__section-text">
-																Quick Actions
-															</span>
-														</li>
-														<li class="m-nav__item">
-															<a href="" class="m-nav__link">
-																<i class="m-nav__link-icon flaticon-share"></i>
-																<span class="m-nav__link-text">
-																	Create Post
-																</span>
-															</a>
-														</li>
-														<li class="m-nav__item">
-															<a href="" class="m-nav__link">
-																<i class="m-nav__link-icon flaticon-chat-1"></i>
-																<span class="m-nav__link-text">
-																	Send Messages
-																</span>
-															</a>
-														</li>
-														<li class="m-nav__item">
-															<a href="" class="m-nav__link">
-																<i class="m-nav__link-icon flaticon-multimedia-2"></i>
-																<span class="m-nav__link-text">
-																	Upload File
-																</span>
-															</a>
-														</li>
-														<li class="m-nav__section">
-															<span class="m-nav__section-text">
-																Useful Links
-															</span>
-														</li>
-														<li class="m-nav__item">
-															<a href="" class="m-nav__link">
-																<i class="m-nav__link-icon flaticon-info"></i>
-																<span class="m-nav__link-text">
-																	FAQ
-																</span>
-															</a>
-														</li>
-														<li class="m-nav__item">
-															<a href="" class="m-nav__link">
-																<i class="m-nav__link-icon flaticon-lifebuoy"></i>
-																<span class="m-nav__link-text">
-																	Support
-																</span>
-															</a>
-														</li>
-														<li class="m-nav__separator m-nav__separator--fit m--hide"></li>
-														<li class="m-nav__item m--hide">
-															<a href="#" class="btn btn-outline-danger m-btn m-btn--pill m-btn--wide btn-sm">
-																Submit
-															</a>
-														</li>
-													</ul>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="m-portlet__body">
-					<!--begin: Datatable -->
-					<div class="m_datatable" id="m_datatable_latest_orders"></div>
-					<!--end: Datatable -->
-				</div>
-			</div>
-		</div>
-		<div class="col-xl-4">
+		
+		<div class="col-xl-6">
 			<!--begin:: Widgets/Audit Log-->
 			<div class="m-portlet m-portlet--full-height">
 				<div class="m-portlet__head">
