登录token获取和验证，全局用户信息装载机制完成

--- a/AnnZone-Console/src/app/theme/layouts/aside-nav/aside-nav.component.html
+++ b/AnnZone-Console/src/app/theme/layouts/aside-nav/aside-nav.component.html
@@ -161,9 +161,9 @@
 												<div class="m-menu__submenu">
 													<span class="m-menu__arrow"></span>
 													<ul class="m-menu__subnav">
-														<li class="m-menu__item" aria-haspopup="true"  data-redirect="true">
-															<a  routerLink="/inner" class="m-menu__link">
-																<i class="m-menu__link-icon flaticon-computer"></i>
+														<li class="m-menu__item" aria-haspopup="true" data-menu-submenu-mode="accordion"  data-redirect="true">
+															<a  routerLink="/inner" class="m-menu__link m-menu__toggle">
+																<i class="m-menu__link-icon flaticon-more-v6"></i>
 																<span class="m-menu__link-title">
 																	<span class="m-menu__link-wrap">
 																		<span class="m-menu__link-text">
@@ -176,11 +176,34 @@
 																		</span>
 																	</span>
 																</span>
+																<i class="m-menu__ver-arrow la la-angle-right"></i>
 															</a>
+															<div class="m-menu__submenu">
+																	<span class="m-menu__arrow"></span>
+																	<ul class="m-menu__subnav">
+																		<li class="m-menu__item" aria-haspopup="true" data-menu-submenu-mode="accordion"  data-redirect="true">
+																			<a  routerLink="/inner" class="m-menu__link">
+																				<i class="m-menu__link-icon flaticon-more-v6"></i>
+																				<span class="m-menu__link-title">
+																					<span class="m-menu__link-wrap">
+																						<span class="m-menu__link-text">
+																							Pending-1
+																						</span>
+																						<span class="m-menu__link-badge">
+																							<span class="m-badge m-badge--warning">
+																								10
+																							</span>
+																						</span>
+																					</span>
+																				</span>
+																			</a>
+																		</li>
+																	</ul>
+																</div>
 														</li>
 														<li class="m-menu__item" aria-haspopup="true"  data-redirect="true">
 															<a  routerLink="/inner" class="m-menu__link">
-																<i class="m-menu__link-icon flaticon-signs-2"></i>
+																<i class="m-menu__link-icon flaticon-more-v6"></i>
 																<span class="m-menu__link-title">
 																	<span class="m-menu__link-wrap">
 																		<span class="m-menu__link-text">
@@ -197,7 +220,7 @@
 														</li>
 														<li class="m-menu__item" aria-haspopup="true"  data-redirect="true">
 															<a  routerLink="/inner" class="m-menu__link">
-																<i class="m-menu__link-icon flaticon-clipboard"></i>
+																<i class="m-menu__link-icon flaticon-more-v6"></i>
 																<span class="m-menu__link-title">
 																	<span class="m-menu__link-wrap">
 																		<span class="m-menu__link-text">
@@ -214,7 +237,7 @@
 														</li>
 														<li class="m-menu__item" aria-haspopup="true"  data-redirect="true">
 															<a  routerLink="/inner" class="m-menu__link">
-																<i class="m-menu__link-icon flaticon-multimedia-2"></i>
+																<i class="m-menu__link-icon flaticon-more-v6"></i>
 																<span class="m-menu__link-title">
 																	<span class="m-menu__link-wrap">
 																		<span class="m-menu__link-text">
@@ -319,7 +342,7 @@
 												<ul class="m-menu__subnav">
 													<li class="m-menu__item" aria-haspopup="true"  data-redirect="true">
 														<a  routerLink="/inner" class="m-menu__link">
-															<i class="m-menu__link-icon flaticon-computer"></i>
+															<i class="m-menu__link-icon flaticon-more-v6"></i>
 															<span class="m-menu__link-title">
 																<span class="m-menu__link-wrap">
 																	<span class="m-menu__link-text">
@@ -336,7 +359,7 @@
 													</li>
 													<li class="m-menu__item" aria-haspopup="true"  data-redirect="true">
 														<a  routerLink="/inner" class="m-menu__link">
-															<i class="m-menu__link-icon flaticon-signs-2"></i>
+															<i class="m-menu__link-icon flaticon-more-v6"></i>
 															<span class="m-menu__link-title">
 																<span class="m-menu__link-wrap">
 																	<span class="m-menu__link-text">
@@ -353,7 +376,7 @@
 													</li>
 													<li class="m-menu__item" aria-haspopup="true"  data-redirect="true">
 														<a  routerLink="/inner" class="m-menu__link">
-															<i class="m-menu__link-icon flaticon-clipboard"></i>
+															<i class="m-menu__link-icon flaticon-more-v6"></i>
 															<span class="m-menu__link-title">
 																<span class="m-menu__link-wrap">
 																	<span class="m-menu__link-text">
@@ -370,7 +393,7 @@
 													</li>
 													<li class="m-menu__item" aria-haspopup="true"  data-redirect="true">
 														<a  routerLink="/inner" class="m-menu__link">
-															<i class="m-menu__link-icon flaticon-multimedia-2"></i>
+															<i class="m-menu__link-icon flaticon-more-v6"></i>
 															<span class="m-menu__link-title">
 																<span class="m-menu__link-wrap">
 																	<span class="m-menu__link-text">
