--- a/AnnZone-Console/src/app/theme/pages/default/inner/inner.component.html
+++ b/AnnZone-Console/src/app/theme/pages/default/inner/inner.component.html
@@ -3,7 +3,7 @@
 	<div class="d-flex align-items-center">
 		<div class="mr-auto">
 			<h3 class="m-subheader__title m-subheader__title--separator">
-				Dashboard
+				内页
 			</h3>
 			<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 				<li class="m-nav__item m-nav__item--home">
@@ -17,7 +17,7 @@
 				<li class="m-nav__item">
 					<a href="" class="m-nav__link">
 						<span class="m-nav__link-text">
-							Dashboard
+							一级菜单
 						</span>
 					</a>
 				</li>
@@ -27,7 +27,7 @@
 				<li class="m-nav__item">
 					<a href="" class="m-nav__link">
 						<span class="m-nav__link-text">
-							Manage Orders
+							二级菜单
 						</span>
 					</a>
 				</li>
@@ -37,7 +37,7 @@
 				<li class="m-nav__item">
 					<a href="" class="m-nav__link">
 						<span class="m-nav__link-text">
-							Latest Orders
+							内页
 						</span>
 					</a>
 				</li>
@@ -57,7 +57,7 @@
 								<ul class="m-nav">
 									<li class="m-nav__section m-nav__section--first m--hide">
 										<span class="m-nav__section-text">
-											Quick Actions
+											快捷菜单
 										</span>
 									</li>
 									<li class="m-nav__item">
@@ -95,7 +95,7 @@
 									<li class="m-nav__separator m-nav__separator--fit"></li>
 									<li class="m-nav__item">
 										<a href="#" class="btn btn-outline-danger m-btn m-btn--pill m-btn--wide btn-sm">
-											Submit
+											提交
 										</a>
 									</li>
 								</ul>
