--- a/AnnZone-Console/src/app/theme/pages/subheader--type-search/index/index.component.html
+++ b/AnnZone-Console/src/app/theme/pages/subheader--type-search/index/index.component.html
@@ -59,15 +59,15 @@
 							<div class="row m-row--no-padding align-items-center">
 								<div class="col">
 									<h3 class="m-widget1__title">
-										Member Profit
+										微博
 									</h3>
 									<span class="m-widget1__desc">
-										Awerage Weekly Profit
+										微博总发布条数
 									</span>
 								</div>
 								<div class="col m--align-right">
 									<span class="m-widget1__number m--font-brand">
-										+$17,800
+										120,2121
 									</span>
 								</div>
 							</div>
@@ -76,15 +76,15 @@
 							<div class="row m-row--no-padding align-items-center">
 								<div class="col">
 									<h3 class="m-widget1__title">
-										Orders
+										博客
 									</h3>
 									<span class="m-widget1__desc">
-										Weekly Customer Orders
+										博客文章总数
 									</span>
 								</div>
 								<div class="col m--align-right">
 									<span class="m-widget1__number m--font-danger">
-										+1,800
+										1,800
 									</span>
 								</div>
 							</div>
@@ -93,15 +93,15 @@
 							<div class="row m-row--no-padding align-items-center">
 								<div class="col">
 									<h3 class="m-widget1__title">
-										Issue Reports
+										笔记
 									</h3>
 									<span class="m-widget1__desc">
-										System bugs and issues
+										记录笔记总条数
 									</span>
 								</div>
 								<div class="col m--align-right">
 									<span class="m-widget1__number m--font-success">
-										-27,49%
+										3,306
 									</span>
 								</div>
 							</div>
@@ -114,10 +114,10 @@
 					<div class="m-widget14">
 						<div class="m-widget14__header">
 							<h3 class="m-widget14__title">
-								Revenue Change
+								文章百分比
 							</h3>
 							<span class="m-widget14__desc">
-								Revenue change breakdown by cities
+								微博，博客，笔记占比
 							</span>
 						</div>
 						<div class="row  align-items-center">
@@ -129,19 +129,19 @@
 									<div class="m-widget14__legend">
 										<span class="m-widget14__legend-bullet m--bg-accent"></span>
 										<span class="m-widget14__legend-text">
-											+10% New York
+											70%微博
 										</span>
 									</div>
 									<div class="m-widget14__legend">
 										<span class="m-widget14__legend-bullet m--bg-warning"></span>
 										<span class="m-widget14__legend-text">
-											-7% London
+											16%博客
 										</span>
 									</div>
 									<div class="m-widget14__legend">
 										<span class="m-widget14__legend-bullet m--bg-brand"></span>
 										<span class="m-widget14__legend-text">
-											+20% California
+											14%笔记
 										</span>
 									</div>
 								</div>
@@ -155,17 +155,17 @@
 					<div class="m-widget14">
 						<div class="m-widget14__header">
 							<h3 class="m-widget14__title">
-								Profit Share
+								文件资源
 							</h3>
 							<span class="m-widget14__desc">
-								Profit Share between customers
+								网盘，相册，视频文件资源占比
 							</span>
 						</div>
 						<div class="row  align-items-center">
 							<div class="col">
 								<div id="m_chart_profit_share" class="m-widget14__chart" style="height: 160px">
 									<div class="m-widget14__stat">
-										45
+										45TB
 									</div>
 								</div>
 							</div>
@@ -174,19 +174,19 @@
 									<div class="m-widget14__legend">
 										<span class="m-widget14__legend-bullet m--bg-accent"></span>
 										<span class="m-widget14__legend-text">
-											37% Sport Tickets
+											37% 网盘
 										</span>
 									</div>
 									<div class="m-widget14__legend">
 										<span class="m-widget14__legend-bullet m--bg-warning"></span>
 										<span class="m-widget14__legend-text">
-											47% Business Events
+											47% 照片
 										</span>
 									</div>
 									<div class="m-widget14__legend">
 										<span class="m-widget14__legend-bullet m--bg-brand"></span>
 										<span class="m-widget14__legend-text">
-											19% Others
+											19% 视频
 										</span>
 									</div>
 								</div>
